<resources>
    <string name="app_name">Comrades</string>
    <string name="app_version">Version 1</string>
    <string name="about_mac_main">Comrades is a free, handy and open file sharing platform by Mobile Applications Club for students of BITS Goa, to become their companion in acads and everyday life. This app allows you to add to the library of content already present and hence creates an ever-growing storage of knowledge and information. So, next time you need a file, you\'ll surely find it on Comrades.</string>
    <string name="about_mac_contributors"><b>Contributors</b></string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="server_client_id">
        666225132801-iklcdj36jau98rf2v44a0v1rnguioatd.apps.googleusercontent.com
    </string>
    <string name="appbar_scrolling_view_behavior_1" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="client_secret">NGfzk-7sJilNmFla6TZy8WrL</string>
    <string name="action_search">Search Courses</string>
    <string name="login_to_add_course">Please login to add Course.</string>
    <string name="login_to_add_file">Please login to add material.</string>
    <string name="login_to_download_file">Please login to download material.</string>
    <string name="storage_permission_needed">Storage permission needed</string>
    <string name="login">Log In</string>
    <string name="allow">Allow</string>
    <string name="sign_in_fails">Sign in failed</string>
    <string name="retry">Retry</string>
    <string name="bits_only_email_allowed">Only BITS email is allowed</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_about_mac">About MAC</string>
    <string name="add_course">Add Course</string>
    <string name="add_file">Add File</string>
    <string name="cancel">Cancel</string>
    <string name="course_name">myCourse name</string>
    <string name="warn_empty_course_name">Course name should not be empty</string>
    <string name="warn_empty_file_name">File name cannot be empty</string>
    <string name="warning_internet">Check your Internet Connection</string>
    <string name="warn_select_file">Please select a file</string>
    <string name="download_directory">/Comrades/</string>
    <string name="course_number_hint">Course Number (ex - F111)</string>
    <string name="stream_code_hint">Stream Code (ex - CS)</string>
    <string name="course_name_hint">Course Name (ex - Computer Programming)</string>
    <string name="download_status_waiting">waiting</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_courses">All Courses</string>
    <string name="title_profile">My Profile</string>
    <string name="title_activity_subscribed_courses">My Courses</string>
    <string name="notification_settings_off">Currently you are not subscribed to any course.Click on the switch above to turn on the Notifications.</string>
    <string name="unsubscribe">UnSubscribe</string>
    <string name="title_activity_rank">RankActivity</string>
    <string name="search_hint">Search Courses and Files</string>
    <string name="search_hint_material">Search Files</string>
    <string name="no_result_found">Your search string didn\'t match any course.Please try again with a different keyword.</string>
    <string name="no_result_found_material">Your search string didn\'t match any material.Please try again with a different keyword.</string>
    <string name="terms_and_condition">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Mobile Applications Club.  Mobile Applications Club is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.  The Comrades app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Comrades app won’t work properly or at all.  You should be aware that there are certain things that Mobile Applications Club will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Mobile Applications Club cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.  If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.  Along the same lines, Mobile Applications Club cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Mobile Applications Club cannot accept responsibility  With respect to Mobile Applications Club’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Mobile Applications Club accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.  At some point, we may wish to update the app. The app is currently available on Android and iOS – the requirements for both systems (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Mobile Applications Club does not promise that it will always update the app so that it is relevant to you and/or works with the iOS/Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.  Changes to This Terms and Conditions  We may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.  Contact Us  If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us.  This Terms and Conditions page was generated by App Privacy Policy Generator</string>
    <string name="click_on_the_bell_icon">Currently, you are not subscribed to any course.To subscribe to a course, go to All courses and click on the Bell Icon.</string>
</resources>