<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.macbitsgoa.comrades.courselistfragment.CourseListFragment"
    tools:ignore="AppCompatResource,UnusedAttribute">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@android:color/white"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_sign_out"
        android:iconTint="@android:color/white"
        android:showAsAction="never"
        android:title="@string/sign_out" />
    <item
        android:id="@+id/action_about_mac"
        android:iconTint="@android:color/white"
        android:showAsAction="never"
        android:title="@string/action_about_mac" />

</menu>
